@@ -1082,3 +1082,6 @@
 	* Fixed a regression in the 'List Affiliates' dialog in davit(1) that
 	'Show Affiliates Missing' month and year dropdowns to fail to be
 	disabled when the check box was unticked.
+2025-09-02 Fred Gleason <fredg@paravelsystems.com>
+	* Cleaned up enforcement of the 'Schedule Programs' and 'Add Remarks'
+	permissions in 'Manage Affiliates' in davit(1).
